# SolverEval

./: Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: run_solvereval.yml  runtests.yml  updatewebsite.yml
repo/: test_simple_functionality.py
solver_eval/: exceptions.py  solvers.py  test_all.py
solver_eval/tests/: test_common.py
solvers/cbc/: 2.10.11
solvers/highs/: 1.6.0  1.7.0
